--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -12,4 +12,9 @@
     <string name="firstDegree">30-35 Obésité du premier degré</string>
     <string name="secondDegree">35-40 Obésité du second degré</string>
     <string name="thirdDegree">40 ans et plus Obésité du troisième degré (morbide)</string>
+    <string name="dialog_1">Dialog </string>
+    <string name="message_text">Text of your message</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="maybe">Maybe</string>
 </resources>
