--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,9 +12,9 @@
     <string name="secondDegree">35-40 Ожиріння другого ступеня</string>
     <string name="thirdDegree">40 і більше Ожиріння третього ступеня (морбідне)</string>
     <string name="dialog_1">Dialog </string>
-    <string name="message_text">Text of your message</string>
-    <string name="yes">Yes</string>
-    <string name="no">No</string>
+    <string name="message_text">Чи влаштовує вас ваша вага?</string>
+    <string name="yes">Так</string>
+    <string name="no">Ні</string>
     <string name="maybe">Maybe</string>
-
+    <string name="result">Результат</string>
 </resources>
