DO strings for HelperActivity

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -17,4 +17,19 @@
     <string name="no">No</string>
     <string name="maybe">Maybe</string>
     <string name="result">Result</string>
-</resources>
+
+    <string name="link1">WIE ESSEN IST, UM MUSKELMASSE ZU GEWINNEN! 7 GESETZE</string>
+    <string name="link2">10 HAUPTFEHLER BEIM MASSEGEWINN</string>
+    <string name="link3">Fitnessclub Premiumklasse</string>
+    <string name="link4">Haben Sie schon immer gedacht, Sie seien zu dünn? Haut und Knochen? Zu einer Zeit, in der die meisten Menschen abnehmen müssen, stellt die Gewichtszunahme eine sehr schwierige Aufgabe dar. Möchten Sie lernen, wie Sie schnell zunehmen können, ohne Ihrer Gesundheit zu schaden? In diesem Artikel erklären wir Ihnen, wie Sie Ihr Körpergewicht in kurzer Zeit steigern können.</string>
+    <string name="link5">GYM-HALLEN UND FITNESSKLUBS IN DER UKRAINE</string>
+    <string name="link6">SPORTZAL Online-Shop für Sportsimulatoren</string>
+    <string name="link7">ELITE FITNESS CLUB PREMIUMKLASSE "5 ELEMENT"</string>
+    <string name="link8">Übung für den ganzen Körper zu Hause</string>
+    <string name="link9">Wie fange ich mit dem Üben für Anfänger an? (BESTE GRUNDLEGENDE ÜBUNGEN!)</string>
+    <string name="link10">Ganzkörpertraining für Anfänger Bauch, Gesäß, Beine, Rücken, Arme PopSport"</string>
+    <string name="link11">Das Streben nach einem gesunden, schönen und lebendigen Lebensstil. Trainieren Sie Ihren Körper, führen Sie neue Gewohnheiten ein, kochen Sie gesund und essen Sie mit Genuss. Sei WOW!</string>
+    <string name="link12">Diät für Faule: Mit welchen Regeln verlieren Sie mühelos Übergewicht</string>
+    <string name="link13">Wie man 30 kg abnimmt. Meine Abnehmgeschichte. Fatburner</string>
+    <string name="link14">Einfacher Gewichtsverlust. Endlich haben Sie das Gefühl, Ihr Essen unter Kontrolle zu haben.</string>
+    <string name="link15">Arzt-Ernährungsberater, Ernährungsberater Experte Systemanalyse von Risiken und kritischen Punkten der Lebensmittelsicherheitskontrolle (HASCP). Der Arzt ist ein Experte der höchsten Kategorie auf dem Gebiet der Lebensmittelsicherheit und Ernährung.</string></resources>
