--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -17,4 +17,19 @@
     <string name="no">No</string>
     <string name="maybe">Maybe</string>
     <string name="result">Result</string>
-</resources>
+
+    <string name="link1">HOW TO EAT TO GAIN MUSCLE MASS! 7 LAWS</string>
+    <string name="link2">10 MAIN MISTAKES WHEN GAINING MASS</string>
+    <string name="link3">Fitness club premium class</string>
+    <string name="link4">Have you always thought you were too thin? Skin and bones? At an hour when most people need to lose weight, gaining it can be a very difficult task. Do you want to learn how to gain weight quickly without harming your health? In this article, we will tell you how to increase body weight in a short time.</string>
+    <string name="link5">GYM HALLS AND FITNESS CLUBS IN UKRAINE</string>
+    <string name="link6">SPORTZAL online store of sports simulators</string>
+    <string name="link7">ELITE FITNESS CLUB PREMIUM CLASS "5 ELEMENT"</string>
+    <string name="link8">Exercise for the whole body at home</string>
+    <string name="link9">How to start practicing for beginners? (BEST FUNDAMENTAL EXERCISES!)</string>
+    <string name="link10">Full Body Workout for Beginners Abs, Buttocks, Legs, Back, Arms PopSport"</string>
+    <string name="link11">Striving for a healthy, beautiful and vibrant lifestyle. Train your body, introduce new habits, cook a healthy meal and eat with pleasure. Be WOW!</string>
+    <string name="link12">Diet for lazy people: what rules will help you lose excess weight effortlessly</string>
+    <string name="link13">How to lose weight by 30 kg. My weight loss story. Fat burner</string>
+    <string name="link14">Simple weight loss. Finally, feel in control of your food.</string>
+    <string name="link15">Doctor-dietitian, nutritionist Expert System Analysis of Risks and Critical Points of Food Safety Control (HASCP). The doctor is an expert of the highest category in the field of food safety and nutrition.</string></resources>
