--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -18,4 +18,19 @@
     <string name="no">No</string>
     <string name="maybe">Maybe</string>
     <string name="result">Result</string>
-</resources>
+
+    <string name="link1">COMMENT MANGER POUR GAGNER DE LA MASSE MUSCULAIRE! 7 LOIS</string>
+    <string name="link2">10 PRINCIPALES ERREURS LORS DE LA PRISE DE MASSE</string>
+    <string name="link3">Classe premium du club de fitness</string>
+    <string name="link4">Avez-vous toujours pensé que vous étiez trop mince? Peau et os? A une heure où la plupart des gens ont besoin de perdre du poids, en gagner peut être une tâche très difficile.Vous voulez apprendre à prendre du poids rapidement sans nuire à votre santé ? Dans cet article, nous vous expliquerons comment augmenter votre poids corporel en peu de temps.</string>
+    <string name="link5">SALLES DE GYM ET CLUBS DE FITNESS EN UKRAINE</string>
+    <string name="link6">SPORTZAL boutique en ligne de simulateurs sportifs</string>
+    <string name="link7">ELITE FITNESS CLUB PREMIUM CLASS "5 ELEMENT"</string>
+    <string name="link8">Exercice pour tout le corps à la maison</string>
+    <string name="link9">Comment commencer à pratiquer pour les débutants? (MEILLEURS EXERCICES FONDAMENTAUX !)</string>
+    <string name="link10">Entraînement complet du corps pour les débutants Abdos, Fesses, Jambes, Dos, Bras PopSport"</string>
+    <string name="link11">En quête d`un mode de vie sain, beau et dynamique. Entraînez votre corps, introduisez de nouvelles habitudes, cuisinez un repas sain et mangez avec plaisir. Soyez WOW!</string>
+    <string name="link12">Régime pour paresseux: quelles règles vous aideront à perdre du poids sans effort</string>
+    <string name="link13">Comment perdre du poids de 30 kg. Mon histoire de perte de poids. Brûleur de graisse</string>
+    <string name="link14">Perte de poids simple. Enfin, sentez-vous maître de votre alimentation.</string>
+    <string name="link15">Médecin-diététiste, nutritionniste Système Expert Analyse des Risques et Points Critiques de la Maîtrise de la Sécurité Alimentaire (HASCP). Le médecin est un expert de la plus haute catégorie dans le domaine de la sécurité alimentaire et de la nutrition.</string></resources>
