--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,26 @@
     <string name="no">Ні</string>
     <string name="maybe">Maybe</string>
     <string name="result">Результат</string>
+
+
+    <string name="link1">ЯК ХАРЧУВАТИСЯ, ЩОБ НАБРАТИ М`ЯЗОВУ МАСУ! 7 ЗАКОНІВ</string>
+    <string name="link2">10 ГОЛОВНИХ ПОМИЛОК ПРИ НАБОРІ МАСИ</string>
+    <string name="link3">Фітнес клуб преміум клас</string>
+    <string name="link4">Ви завжди вважали собі занадто худим? Шкіра та кістки? У ту годину, коли більшості необхідно скинути вес, набрати його може бути дуже складним завданням.Хочете дізнатися як швидко набрати вагу без шкоди для здоров`я? У цій статті ми розповімо як збільшити масу тіла за короткий термін.</string>
+    <string name="link5">ТРЕНАЖЕРНІ ЗАЛИ ТА ФІТНЕС КЛУБИ В УКРАЇНІ</string>
+    <string name="link6">Інтернет-магазин спортивних тренажерів SPORTZAL</string>
+    <string name="link7">ЕЛІТНИЙ ФІТНЕС КЛУБ ПРЕМІУМ КЛАСУ «5 ЕЛЕМЕНТ»</string>
+    <string name="link8">Тренування для всього тіла в домашніх умовах</string>
+    <string name="link9">Як Почати Займатися Початківцям? (КРАЩІ ФУНДАМЕНТАЛЬНІ ВПРАВИ!)</string>
+    <string name="link10">Тренування на все тіло для новачків Прес, сідниці, ноги, спина, руки PopSport»</string>
+    <string name="link11">Прагнення до здорового, красивого та яскравого способу життя. Тренуй тіло, впроваджуй нові звички, готуй корисну страву та харчуйся із задоволенням. Будь WOW!</string>
+    <string name="link12">Дієта для лінивих: які правила допоможуть скинути зайву вагу без зусиль</string>
+    <string name="link13">Как похудеть на 30 кг. Моя история похудения. Жиросжигатель</string>
+    <string name="link14">Просте схуднення. Зрештою, відчуйте контроль над їжею.</string>
+    <string name="link15">Врач-диетолог, нутрициолог Эксперт системы Анализа рисков и критических точек контроля пищевой безопасности (ХАССП). Врач - эксперт высшей категории в отрасли пищевой безопасности и нутрициологии.</string>
+
+
+
+
+
 </resources>
