--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -32,4 +32,44 @@
     <string name="link12">Diet for lazy people: what rules will help you lose excess weight effortlessly</string>
     <string name="link13">How to lose weight by 30 kg. My weight loss story. Fat burner</string>
     <string name="link14">Simple weight loss. Finally, feel in control of your food.</string>
-    <string name="link15">Doctor-dietitian, nutritionist Expert System Analysis of Risks and Critical Points of Food Safety Control (HASCP). The doctor is an expert of the highest category in the field of food safety and nutrition.</string></resources>
+    <string name="link15">Doctor-dietitian, nutritionist Expert System Analysis of Risks and Critical Points of Food Safety Control (HASCP). The doctor is an expert of the highest category in the field of food safety and nutrition.</string>
+
+    <string name="facharbeit_text">Term Paper by Tobias Schnürpel</string>
+    <string name="title_pedometer">Pedometer</string>
+    <string name="title_acceleration">Accelerometer</string>
+    <string name="pedometer">Pedometer</string>
+    <string name="number_of_steps">Amount of Steps:</string>
+    <string name="pedometer_running">Pedometer running</string>
+    <string name="pedometer_not_running">Pedometer stopped</string>
+    <string name="type_of_step">Type of step:</string>
+    <string name="duration_of_step">Duration of step:</string>
+    <string name="acitvate_pedometer">Activate Pedometer</string>
+    <string name="disable_pedometer">Disable Pedometer</string>
+    <string name="results">Results</string>
+    <string name="of_the_last_measurement">of the last measurement (estimated)</string>
+    <string name="total_steps">Total steps:</string>
+    <string name="from_that">from that…</string>
+    <string name="walking_steps">Walking:</string>
+    <string name="jogging_steps">Jogging / Fast walking:</string>
+    <string name="running_steps">Running:</string>
+    <string name="total_distance">Total distance:</string>
+    <string name="average_speed">Average speed:</string>
+    <string name="average_frequency">Average frequency:</string>
+    <string name="burned_calories">Burned calories:</string>
+    <string name="moving_time">Moving time:</string>
+    <string name="walking">Walking</string>
+    <string name="jogging">Jogging</string>
+    <string name="running">Running</string>
+    <string name="live_data">Live data</string>
+    <string name="graph">Graph</string>
+    <string name="details">Details</string>
+    <string name="name">Name:</string>
+    <string name="manufacturer">Manufacturer:</string>
+    <string name="version">Version</string>
+    <string name="energy">Energy:</string>
+    <string name="resolution">Resolution:</string>
+    <string name="max_range">max. range:</string>
+    <string name="min_range">min. range:</string>
+    <string name="accuracy">Accuracy:</string>
+    <string name="delay">Delay:</string>
+</resources>
