--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,44 +35,50 @@
     <string name="link14">Просте схуднення. Зрештою, відчуйте контроль над їжею.</string>
     <string name="link15">Врач-диетолог, нутрициолог Эксперт системы Анализа рисков и критических точек контроля пищевой безопасности (ХАССП). Врач - эксперт высшей категории в отрасли пищевой безопасности и нутрициологии.</string>
 
-    <string name="facharbeit_text">Term Paper by Tobias Schnürpel</string>
-    <string name="title_pedometer">Pedometer</string>
-    <string name="title_acceleration">Accelerometer</string>
-    <string name="pedometer">Pedometer</string>
-    <string name="number_of_steps">Amount of Steps:</string>
-    <string name="pedometer_running">Pedometer running</string>
-    <string name="pedometer_not_running">Pedometer stopped</string>
-    <string name="type_of_step">Type of step:</string>
-    <string name="duration_of_step">Duration of step:</string>
-    <string name="acitvate_pedometer">Activate Pedometer</string>
-    <string name="disable_pedometer">Disable Pedometer</string>
-    <string name="results">Results</string>
-    <string name="of_the_last_measurement">of the last measurement (estimated)</string>
-    <string name="total_steps">Total steps:</string>
-    <string name="from_that">from that…</string>
-    <string name="walking_steps">Walking:</string>
-    <string name="jogging_steps">Jogging / Fast walking:</string>
-    <string name="running_steps">Running:</string>
-    <string name="total_distance">Total distance:</string>
-    <string name="average_speed">Average speed:</string>
-    <string name="average_frequency">Average frequency:</string>
-    <string name="burned_calories">Burned calories:</string>
-    <string name="moving_time">Moving time:</string>
-    <string name="walking">Walking</string>
-    <string name="jogging">Jogging</string>
-    <string name="running">Running</string>
-    <string name="live_data">Live data</string>
-    <string name="graph">Graph</string>
-    <string name="details">Details</string>
-    <string name="name">Name:</string>
-    <string name="manufacturer">Manufacturer:</string>
-    <string name="version">Version</string>
-    <string name="energy">Energy:</string>
-    <string name="resolution">Resolution:</string>
-    <string name="max_range">max. range:</string>
-    <string name="min_range">min. range:</string>
-    <string name="accuracy">Accuracy:</string>
-    <string name="delay">Delay:</string>
+    <string name="title_pedometer">Крокомір</string>
+    <string name="title_acceleration">Датчик прискорення</string>
 
+    <string name="pedometer">Крокомір</string>
+    <string name="number_of_steps">Кількість кроків:</string>
+    <string name="pedometer_running">крокомір працює</string>
+    <string name="pedometer_not_running">Крокомір зупинено</string>
+    <string name="type_of_step">Тип кроку:</string>
+    <string name="duration_of_step">Тривалість кроку:</string>
 
+    <string name="acitvate_pedometer">Запустити крокомір</string>
+    <string name="disable_pedometer">Зупинити крокомір</string>
+
+    <string name="results">Результати</string>
+    <string name="of_the_last_measurement">останнього вимірювання (приблизно)</string>
+    <string name="total_steps">Загальна кількість кроків:</string>
+    <string name="from_that">з цього...</string>
+    <string name="walking_steps">Ходьба:</string>
+    <string name="jogging_steps">Біг/швидка ходьба:</string>
+    <string name="running_steps">Виконати:</string>
+    <string name="total_distance">Загальна відстань:</string>
+    <string name="average_speed">Середня швидкість:</string>
+    <string name="average_frequency">Частота кроків:</string>
+    <string name="burned_calories">Страчені калорії:</string>
+    <string name="moving_time">Час руху:</string>
+
+    <string name="walking">Ходьба</string>
+    <string name="jogging">Біг підтюпцем</string>
+    <string name="running">Запущено</string>
+
+    <string name="live_data">Метрики в реальному часі</string>
+    <string name="graph">Графік</string>
+    <string name="details">Деталі</string>
+
+    <string name="name">Ім`я:</string>
+    <string name="manufacturer">Виробник:</string>
+    <string name="version">Версія:</string>
+    <string name="energy">Енергія:</string>
+    <string name="resolution">Вирішення:</string>
+    <string name="max_range">макс. Діапазон:</string>
+    <string name="min_range">мін. Діапазон:</string>
+    <string name="accuracy">Точність:</string>
+    <string name="delay">Затримка:</string>
+    <string name="kalorian">Калорій</string>
+    <string name="stepsmin">кроків/хв:</string>
+    <string name="mc">М/С:</string>
 </resources>
