--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -47,6 +47,7 @@
     <string name="disable_pedometer">Disable Pedometer</string>
     <string name="results">Results</string>
     <string name="of_the_last_measurement">of the last measurement</string>
+    <string name="transfer_to_next_page_text">Переглянути результати</string>
     <string name="total_steps">Total steps:</string>
     <string name="from_that">from that…</string>
     <string name="walking_steps">Walking:</string>
