--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -47,7 +47,7 @@
     <string name="disable_pedometer">Disable Pedometer</string>
     <string name="results">Results</string>
     <string name="of_the_last_measurement">of the last measurement</string>
-    <string name="transfer_to_next_page_text">Переглянути результати</string>
+    <string name="transfer_to_next_page_text">Check the results</string>
     <string name="total_steps">Total steps:</string>
     <string name="from_that">from that…</string>
     <string name="walking_steps">Walking:</string>
@@ -76,4 +76,15 @@
     <string name="kalorian">Calorie</string>
     <string name="stepsmin">steps/min:</string>
     <string name="mc">m/s:</string>
+    <string name="_1l">1L</string>
+    <string name="_0_5l">0.5L</string>
+    <string name="_0_33l">0.33L</string>
+    <string name="_0_25l">0.25L</string>
+    <string name="_0">0</string>
+    <string name="wasdrank">drank</string>
+    <string name="hours">h</string>
+    <string name="minutes">m</string>
+    <string name="seconds">s</string>
+    <string name="totalDistance">m</string>
+    <string name="Date">Date: </string>
 </resources>
