add new localize and clear Code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,7 +73,7 @@
     <string name="delay">Затримка:</string>
     <string name="kalorian">Калорій</string>
     <string name="stepsmin">кроків/хв:</string>
-    <string name="mc">М/С:</string>
+    <string name="mc">м/с:</string>
     <string name="_1l">1Л</string>
     <string name="_0_5l">0.5Л</string>
     <string name="_0_33l">0.33Л</string>
