--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -88,4 +88,10 @@
     <string name="seconds">s</string>
     <string name="totalDistance">m</string>
     <string name="Date">Date: </string>
+    <string name="_SM">Sm</string>
+    <string name="_M">Mètre</string>
+    <string name="_D">Pouce</string>
+    <string name="_FT">Pied</string>
+    <string name="_KG">Kg</string>
+    <string name="_Funt">Funt</string>
 </resources>
